Add styling and streamlit app

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -3,16 +3,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%load_ext jupyter_black"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "giZVC89clDyT"
+      },
       "outputs": [],
       "source": [
         "! kaggle datasets download -p sentiment140 --unzip -d kazanova/sentiment140"
@@ -44,16 +37,14 @@
       "source": [
         "import re\n",
         "import pickle\n",
-        "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
         "import html\n",
         "import nltk\n",
         "from nltk.corpus import stopwords\n",
-        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "from sklearn.model_selection import train_test_split\n",
-        "\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras import layers"
       ]
@@ -61,7 +52,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "74p7HpStlDyU"
+      },
       "outputs": [],
       "source": [
         "nltk.download(\"stopwords\")"
@@ -118,7 +111,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "eTiawN3glDyW"
+      },
       "source": [
         "### Preprocess"
       ]
@@ -126,7 +121,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "N68rIFoqlDyW"
+      },
       "outputs": [],
       "source": [
         "print(df.text[df.text.str.startswith(\"@\")].iloc[0])  # Mentions/tags, regex - @\\S+\n",
@@ -139,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2020-09-30T13:34:11.285809Z",
@@ -174,7 +171,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "PTbfMPiglDyX"
+      },
       "outputs": [],
       "source": [
         "text = df.text.sample(1).iloc[0]\n",
@@ -184,7 +183,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "BtNoKdbXlDyX"
+      },
       "source": [
         "### Distribution"
       ]
@@ -192,7 +193,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "dOEz7CAhlDyX"
+      },
       "outputs": [],
       "source": [
         "df.sentiment.value_counts()"
@@ -201,16 +204,18 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Atm7V8BhlDyY"
+      },
       "outputs": [],
       "source": [
-        "data_df = df.sample(frac=0.25)  # Select a fraction of data\n",
+        "data_df = df.sample(frac=0.05)  # Select a fraction of data\n",
         "data_df.sentiment.value_counts()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2020-09-30T13:34:11.328564Z",
@@ -236,7 +241,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "yPZYbgnYlDyY"
+      },
       "outputs": [],
       "source": [
         "X_train, X_val, Y_train, Y_val = train_test_split(\n",
@@ -264,8 +271,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "4Rniij4klDyY"
+      },
       "outputs": [],
       "source": [
         "NUM_FEATURES = 2048"
@@ -273,8 +282,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "cRjg51-IlDyY"
+      },
       "outputs": [],
       "source": [
         "vectorizer = TfidfVectorizer(max_features=NUM_FEATURES)"
@@ -282,8 +293,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "jSZUmzFSlDyZ"
+      },
       "outputs": [],
       "source": [
         "vectorizer.fit(X_train)\n",
@@ -295,14 +308,16 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Yqsi9ALylDyZ"
+      },
       "source": [
         "### Data Preparation"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2020-09-30T13:35:49.300788Z",
@@ -330,23 +345,27 @@
         "    return _generator\n",
         "\n",
         "\n",
-        "def get_dataset(features, labels, batch_size=128):\n",
+        "def get_dataset(features, labels, batch_size=128, mode=\"val\"):\n",
         "    dataset = tf.data.Dataset.from_generator(\n",
-        "        generator(feature_vectors, labels),\n",
+        "        generator(features, labels),\n",
         "        output_signature=(\n",
         "            tf.TensorSpec(shape=(1, NUM_FEATURES), dtype=tf.float32),\n",
         "            tf.TensorSpec(shape=(), dtype=tf.int32),\n",
         "        ),\n",
         "    )\n",
-        "    dataset = dataset.shuffle(2 * batch_size)\n",
-        "    dataset = dataset.batch(batch_size)\n",
+        "    if mode == \"train\":\n",
+        "        dataset = dataset.shuffle(2 * batch_size)\n",
+        "    dataset = dataset.batch(batch_size, drop_remainder=True, num_parallel_calls=tf.data.AUTOTUNE)\n",
+        "    dataset = dataset.prefetch(tf.data.AUTOTUNE)\n",
         "    return dataset"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "eTbuJ7gPlDyZ"
+      },
       "outputs": [],
       "source": [
         "X_train_vectors = vectorizer.transform(X_train)\n",
@@ -355,17 +374,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "8gsx1yOIlDyZ"
+      },
       "outputs": [],
       "source": [
-        "train_dataset = get_dataset(X_train_vectors, Y_train)\n",
-        "val_dataset = get_dataset(X_val_vectors, Y_train)"
+        "BATCH_SIZE = 512\n",
+        "train_dataset = get_dataset(X_train_vectors, Y_train, BATCH_SIZE, mode=\"train\")\n",
+        "val_dataset = get_dataset(X_val_vectors, Y_train, BATCH_SIZE, mode=\"val\")"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "issfBU8ulDyZ"
+      },
       "source": [
         "### Model"
       ]
@@ -404,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2020-09-30T13:35:53.321615Z",
@@ -429,7 +453,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "tSfZcrFJlDyc"
+      },
       "source": [
         "### Train"
       ]
@@ -456,12 +482,16 @@
       },
       "outputs": [],
       "source": [
-        "history = model.fit(train_dataset, validation_data=val_dataset, epochs=50)"
+        "history = model.fit(\n",
+        "    train_dataset,\n",
+        "    validation_data=val_dataset,\n",
+        "    epochs=25,\n",
+        ")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2020-09-30T13:41:00.958551Z",
@@ -486,15 +516,14 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "name": "sentiment-analysis.ipynb",
+      "gpuType": "T4",
       "private_outputs": true,
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
-      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -507,7 +536,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.10.12"
     },
     "papermill": {
       "duration": 436.259004,
